--- a/MaulingMonkey.FlameGraphs/MaulingMonkey.FlameGraphs.csproj
+++ b/MaulingMonkey.FlameGraphs/MaulingMonkey.FlameGraphs.csproj
@@ -38,9 +38,12 @@
   <ItemGroup>
     <Compile Include="Caller.cs" />
     <Compile Include="ITraceRecord.cs" />
+    <Compile Include="Layout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rect.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="TraceEntry.cs" />
+    <Compile Include="XY.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
