Add some minor documentation, move ThreadInfo/ThreadTraceCapture into seperate files, add a bunch of thread safety assertions, add a missing lock

--- a/MaulingMonkey.FlameGraphs/MaulingMonkey.FlameGraphs.csproj
+++ b/MaulingMonkey.FlameGraphs/MaulingMonkey.FlameGraphs.csproj
@@ -39,8 +39,10 @@
     <Compile Include="Caller.cs" />
     <Compile Include="ITraceRecord.cs" />
     <Compile Include="Layout.cs" />
+    <Compile Include="PerThreadInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rect.cs" />
+    <Compile Include="ThreadTraceCapture.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="TraceEntry.cs" />
     <Compile Include="XY.cs" />
